Programa 2/parser.output
Terminals unused in grammar

   LCOR
   RCOR


State 91 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: declaraciones funciones

    2 declaraciones: tipo lista_var PYC declaraciones
    3              | tipo_registro lista_var PYC declaraciones
    4              | %empty

    5 tipo_registro: ESTRUCT INICIO declaraciones END

    6 tipo: base tipo_arreglo

    7 base: ENTERO
    8     | REAL
    9     | DREAL
   10     | CAR
   11     | SIN

   12 tipo_arreglo: LPAR NUM RPAR tipo_arreglo
   13             | %empty

   14 lista_var: lista_var COMA ID
   15          | ID

   16 funciones: DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias END funciones
   17          | %empty

   18 argumentos: lista_arg
   19           | SIN

   20 lista_arg: lista_arg COMA arg
   21          | arg

   22 arg: tipo_arg ID

   23 tipo_arg: base param_arr

   24 param_arr: LPAR RPAR param_arr
   25          | %empty

   26 sentencias: sentencias sentencia
   27           | sentencia

   28 sentencia: IF e_bool THEN sentencia END
   29          | IF e_bool THEN sentencia SINO sentencia SINO sentencia END
   30          | WHILE e_bool DO sentencia END
   31          | DO sentencia WHILE e_bool PYC
   32          | SEGUN LPAR variable RPAR DO casos predeterminado END
   33          | variable IGUAL expresion PYC
   34          | WRITE expresion PYC
   35          | READ variable PYC
   36          | DEV PYC
   37          | DEV expresion PYC
   38          | TERMINAR PYC
   39          | INICIO sentencias END

   40 casos: CASO NUM DOSP sentencia casos
   41      | CASO NUM DOSP sentencia

   42 predeterminado: PRED DOSP sentencia
   43               | %empty

   44 e_bool: e_bool OR e_bool
   45       | e_bool AND e_bool
   46       | NOT e_bool
   47       | relacional
   48       | TRUE
   49       | FALSE

   50 relacional: relacional MENORQUE relacional
   51           | relacional MAYORQUE relacional
   52           | relacional MENORIGUAL relacional
   53           | relacional MAYORIGUAL relacional
   54           | relacional IDENTICO relacional
   55           | relacional DIFERENTE relacional
   56           | expresion

   57 expresion: expresion MAS expresion
   58          | expresion MENOS expresion
   59          | expresion MUL expresion
   60          | expresion DIV expresion
   61          | expresion MODULO expresion
   62          | LPAR expresion RPAR
   63          | variable
   64          | NUM
   65          | CADENA
   66          | CARACTER

   67 variable: ID variable_comp

   68 variable_comp: dato_est_sim
   69              | arreglo
   70              | LPAR parametros RPAR

   71 dato_est_sim: dato_est_sim PUNTO ID
   72             | %empty

   73 arreglo: LPAR expresion RPAR
   74        | arreglo LPAR expresion RPAR

   75 parametros: lista_param
   76           | %empty

   77 lista_param: lista_param COMA expresion
   78            | expresion


Terminals, with rules where they appear

$end (0) 0
error (256)
DEF (258) 16
ESTRUCT (259) 5
ENTERO (260) 7
REAL (261) 8
DREAL (262) 9
SIN (263) 11 19
CAR (264) 10
CARACTER (265) 66
CADENA (266) 65
NUM (267) 12 40 41 64
ID (268) 14 15 16 22 67 71
IF (269) 28 29
THEN (270) 28 29
DO (271) 30 31 32
WHILE (272) 30 31
SEGUN (273) 32
TRUE (274) 48
FALSE (275) 49
INICIO (276) 5 16 39
TERMINAR (277) 38
END (278) 5 16 28 29 30 32 39
CASO (279) 40 41
PRED (280) 42
WRITE (281) 34
READ (282) 35
DEV (283) 36 37
COMA (284) 14 20 77
DOSP (285) 40 41 42
PYC (286) 2 3 31 33 34 35 36 37 38
LPAR (287) 12 16 24 32 62 70 73 74
RPAR (288) 12 16 24 32 62 70 73 74
LCOR (289)
RCOR (290)
PUNTO (291) 71
NOT (292) 46
MUL (293) 59
DIV (294) 60
MODULO (295) 61
MAS (296) 57
MENOS (297) 58
MENORQUE (298) 50
MENORIGUAL (299) 52
MAYORQUE (300) 51
MAYORIGUAL (301) 53
IDENTICO (302) 54
DIFERENTE (303) 55
AND (304) 45
OR (305) 44
IGUAL (306) 33
SITEMP (307)
SINO (308) 29


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
programa (55)
    on left: 1, on right: 0
declaraciones (56)
    on left: 2 3 4, on right: 1 2 3 5 16
tipo_registro (57)
    on left: 5, on right: 3
tipo (58)
    on left: 6, on right: 2 16
base (59)
    on left: 7 8 9 10 11, on right: 6 23
tipo_arreglo (60)
    on left: 12 13, on right: 6 12
lista_var (61)
    on left: 14 15, on right: 2 3 14
funciones (62)
    on left: 16 17, on right: 1 16
argumentos (63)
    on left: 18 19, on right: 16
lista_arg (64)
    on left: 20 21, on right: 18 20
arg (65)
    on left: 22, on right: 20 21
tipo_arg (66)
    on left: 23, on right: 22
param_arr (67)
    on left: 24 25, on right: 23 24
sentencias (68)
    on left: 26 27, on right: 16 26 39
sentencia (69)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39, on right: 26 27 28
    29 30 31 40 41 42
casos (70)
    on left: 40 41, on right: 32 40
predeterminado (71)
    on left: 42 43, on right: 32
e_bool (72)
    on left: 44 45 46 47 48 49, on right: 28 29 30 31 44 45 46
relacional (73)
    on left: 50 51 52 53 54 55 56, on right: 47 50 51 52 53 54 55
expresion (74)
    on left: 57 58 59 60 61 62 63 64 65 66, on right: 33 34 37 56 57
    58 59 60 61 62 73 74 77 78
variable (75)
    on left: 67, on right: 32 33 35 63
variable_comp (76)
    on left: 68 69 70, on right: 67
dato_est_sim (77)
    on left: 71 72, on right: 68 71
arreglo (78)
    on left: 73 74, on right: 69 74
parametros (79)
    on left: 75 76, on right: 70
lista_param (80)
    on left: 77 78, on right: 75 77


State 0

    0 $accept: . programa $end

    ESTRUCT  shift, and go to state 1
    ENTERO   shift, and go to state 2
    REAL     shift, and go to state 3
    DREAL    shift, and go to state 4
    SIN      shift, and go to state 5
    CAR      shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    programa       go to state 7
    declaraciones  go to state 8
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 1

    5 tipo_registro: ESTRUCT . INICIO declaraciones END

    INICIO  shift, and go to state 12


State 2

    7 base: ENTERO .

    $default  reduce using rule 7 (base)


State 3

    8 base: REAL .

    $default  reduce using rule 8 (base)


State 4

    9 base: DREAL .

    $default  reduce using rule 9 (base)


State 5

   11 base: SIN .

    $default  reduce using rule 11 (base)


State 6

   10 base: CAR .

    $default  reduce using rule 10 (base)


State 7

    0 $accept: programa . $end

    $end  shift, and go to state 13


State 8

    1 programa: declaraciones . funciones

    DEF  shift, and go to state 14

    $default  reduce using rule 17 (funciones)

    funciones  go to state 15


State 9

    3 declaraciones: tipo_registro . lista_var PYC declaraciones

    ID  shift, and go to state 16

    lista_var  go to state 17


State 10

    2 declaraciones: tipo . lista_var PYC declaraciones

    ID  shift, and go to state 16

    lista_var  go to state 18


State 11

    6 tipo: base . tipo_arreglo

    LPAR  shift, and go to state 19

    $default  reduce using rule 13 (tipo_arreglo)

    tipo_arreglo  go to state 20


State 12

    5 tipo_registro: ESTRUCT INICIO . declaraciones END

    ESTRUCT  shift, and go to state 1
    ENTERO   shift, and go to state 2
    REAL     shift, and go to state 3
    DREAL    shift, and go to state 4
    SIN      shift, and go to state 5
    CAR      shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 21
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 13

    0 $accept: programa $end .

    $default  accept


State 14

   16 funciones: DEF . tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias END funciones

    ENTERO  shift, and go to state 2
    REAL    shift, and go to state 3
    DREAL   shift, and go to state 4
    SIN     shift, and go to state 5
    CAR     shift, and go to state 6

    tipo  go to state 22
    base  go to state 11


State 15

    1 programa: declaraciones funciones .

    $default  reduce using rule 1 (programa)


State 16

   15 lista_var: ID .

    $default  reduce using rule 15 (lista_var)


State 17

    3 declaraciones: tipo_registro lista_var . PYC declaraciones
   14 lista_var: lista_var . COMA ID

    COMA  shift, and go to state 23
    PYC   shift, and go to state 24


State 18

    2 declaraciones: tipo lista_var . PYC declaraciones
   14 lista_var: lista_var . COMA ID

    COMA  shift, and go to state 23
    PYC   shift, and go to state 25


State 19

   12 tipo_arreglo: LPAR . NUM RPAR tipo_arreglo

    NUM  shift, and go to state 26


State 20

    6 tipo: base tipo_arreglo .

    $default  reduce using rule 6 (tipo)


State 21

    5 tipo_registro: ESTRUCT INICIO declaraciones . END

    END  shift, and go to state 27


State 22

   16 funciones: DEF tipo . ID LPAR argumentos RPAR INICIO declaraciones sentencias END funciones

    ID  shift, and go to state 28


State 23

   14 lista_var: lista_var COMA . ID

    ID  shift, and go to state 29


State 24

    3 declaraciones: tipo_registro lista_var PYC . declaraciones

    ESTRUCT  shift, and go to state 1
    ENTERO   shift, and go to state 2
    REAL     shift, and go to state 3
    DREAL    shift, and go to state 4
    SIN      shift, and go to state 5
    CAR      shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 30
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 25

    2 declaraciones: tipo lista_var PYC . declaraciones

    ESTRUCT  shift, and go to state 1
    ENTERO   shift, and go to state 2
    REAL     shift, and go to state 3
    DREAL    shift, and go to state 4
    SIN      shift, and go to state 5
    CAR      shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 31
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 26

   12 tipo_arreglo: LPAR NUM . RPAR tipo_arreglo

    RPAR  shift, and go to state 32


State 27

    5 tipo_registro: ESTRUCT INICIO declaraciones END .

    $default  reduce using rule 5 (tipo_registro)


State 28

   16 funciones: DEF tipo ID . LPAR argumentos RPAR INICIO declaraciones sentencias END funciones

    LPAR  shift, and go to state 33


State 29

   14 lista_var: lista_var COMA ID .

    $default  reduce using rule 14 (lista_var)


State 30

    3 declaraciones: tipo_registro lista_var PYC declaraciones .

    $default  reduce using rule 3 (declaraciones)


State 31

    2 declaraciones: tipo lista_var PYC declaraciones .

    $default  reduce using rule 2 (declaraciones)


State 32

   12 tipo_arreglo: LPAR NUM RPAR . tipo_arreglo

    LPAR  shift, and go to state 19

    $default  reduce using rule 13 (tipo_arreglo)

    tipo_arreglo  go to state 34


State 33

   16 funciones: DEF tipo ID LPAR . argumentos RPAR INICIO declaraciones sentencias END funciones

    ENTERO  shift, and go to state 2
    REAL    shift, and go to state 3
    DREAL   shift, and go to state 4
    SIN     shift, and go to state 35
    CAR     shift, and go to state 6

    base        go to state 36
    argumentos  go to state 37
    lista_arg   go to state 38
    arg         go to state 39
    tipo_arg    go to state 40


State 34

   12 tipo_arreglo: LPAR NUM RPAR tipo_arreglo .

    $default  reduce using rule 12 (tipo_arreglo)


State 35

   11 base: SIN .
   19 argumentos: SIN .

    RPAR      reduce using rule 19 (argumentos)
    $default  reduce using rule 11 (base)


State 36

   23 tipo_arg: base . param_arr

    LPAR  shift, and go to state 41

    $default  reduce using rule 25 (param_arr)

    param_arr  go to state 42


State 37

   16 funciones: DEF tipo ID LPAR argumentos . RPAR INICIO declaraciones sentencias END funciones

    RPAR  shift, and go to state 43


State 38

   18 argumentos: lista_arg .
   20 lista_arg: lista_arg . COMA arg

    COMA  shift, and go to state 44

    $default  reduce using rule 18 (argumentos)


State 39

   21 lista_arg: arg .

    $default  reduce using rule 21 (lista_arg)


State 40

   22 arg: tipo_arg . ID

    ID  shift, and go to state 45


State 41

   24 param_arr: LPAR . RPAR param_arr

    RPAR  shift, and go to state 46


State 42

   23 tipo_arg: base param_arr .

    $default  reduce using rule 23 (tipo_arg)


State 43

   16 funciones: DEF tipo ID LPAR argumentos RPAR . INICIO declaraciones sentencias END funciones

    INICIO  shift, and go to state 47


State 44

   20 lista_arg: lista_arg COMA . arg

    ENTERO  shift, and go to state 2
    REAL    shift, and go to state 3
    DREAL   shift, and go to state 4
    SIN     shift, and go to state 5
    CAR     shift, and go to state 6

    base      go to state 36
    arg       go to state 48
    tipo_arg  go to state 40


State 45

   22 arg: tipo_arg ID .

    $default  reduce using rule 22 (arg)


State 46

   24 param_arr: LPAR RPAR . param_arr

    LPAR  shift, and go to state 41

    $default  reduce using rule 25 (param_arr)

    param_arr  go to state 49


State 47

   16 funciones: DEF tipo ID LPAR argumentos RPAR INICIO . declaraciones sentencias END funciones

    ESTRUCT  shift, and go to state 1
    ENTERO   shift, and go to state 2
    REAL     shift, and go to state 3
    DREAL    shift, and go to state 4
    SIN      shift, and go to state 5
    CAR      shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 50
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 48

   20 lista_arg: lista_arg COMA arg .

    $default  reduce using rule 20 (lista_arg)


State 49

   24 param_arr: LPAR RPAR param_arr .

    $default  reduce using rule 24 (param_arr)


State 50

   16 funciones: DEF tipo ID LPAR argumentos RPAR INICIO declaraciones . sentencias END funciones

    ID        shift, and go to state 51
    IF        shift, and go to state 52
    DO        shift, and go to state 53
    WHILE     shift, and go to state 54
    SEGUN     shift, and go to state 55
    INICIO    shift, and go to state 56
    TERMINAR  shift, and go to state 57
    WRITE     shift, and go to state 58
    READ      shift, and go to state 59
    DEV       shift, and go to state 60

    sentencias  go to state 61
    sentencia   go to state 62
    variable    go to state 63


State 51

   67 variable: ID . variable_comp

    LPAR  shift, and go to state 64

    $default  reduce using rule 72 (dato_est_sim)

    variable_comp  go to state 65
    dato_est_sim   go to state 66
    arreglo        go to state 67


State 52

   28 sentencia: IF . e_bool THEN sentencia END
   29          | IF . e_bool THEN sentencia SINO sentencia SINO sentencia END

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    TRUE      shift, and go to state 71
    FALSE     shift, and go to state 72
    LPAR      shift, and go to state 73
    NOT       shift, and go to state 74

    e_bool      go to state 75
    relacional  go to state 76
    expresion   go to state 77
    variable    go to state 78


State 53

   31 sentencia: DO . sentencia WHILE e_bool PYC

    ID        shift, and go to state 51
    IF        shift, and go to state 52
    DO        shift, and go to state 53
    WHILE     shift, and go to state 54
    SEGUN     shift, and go to state 55
    INICIO    shift, and go to state 56
    TERMINAR  shift, and go to state 57
    WRITE     shift, and go to state 58
    READ      shift, and go to state 59
    DEV       shift, and go to state 60

    sentencia  go to state 79
    variable   go to state 63


State 54

   30 sentencia: WHILE . e_bool DO sentencia END

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    TRUE      shift, and go to state 71
    FALSE     shift, and go to state 72
    LPAR      shift, and go to state 73
    NOT       shift, and go to state 74

    e_bool      go to state 80
    relacional  go to state 76
    expresion   go to state 77
    variable    go to state 78


State 55

   32 sentencia: SEGUN . LPAR variable RPAR DO casos predeterminado END

    LPAR  shift, and go to state 81


State 56

   39 sentencia: INICIO . sentencias END

    ID        shift, and go to state 51
    IF        shift, and go to state 52
    DO        shift, and go to state 53
    WHILE     shift, and go to state 54
    SEGUN     shift, and go to state 55
    INICIO    shift, and go to state 56
    TERMINAR  shift, and go to state 57
    WRITE     shift, and go to state 58
    READ      shift, and go to state 59
    DEV       shift, and go to state 60

    sentencias  go to state 82
    sentencia   go to state 62
    variable    go to state 63


State 57

   38 sentencia: TERMINAR . PYC

    PYC  shift, and go to state 83


State 58

   34 sentencia: WRITE . expresion PYC

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    LPAR      shift, and go to state 73

    expresion  go to state 84
    variable   go to state 78


State 59

   35 sentencia: READ . variable PYC

    ID  shift, and go to state 51

    variable  go to state 85


State 60

   36 sentencia: DEV . PYC
   37          | DEV . expresion PYC

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    PYC       shift, and go to state 86
    LPAR      shift, and go to state 73

    expresion  go to state 87
    variable   go to state 78


State 61

   16 funciones: DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias . END funciones
   26 sentencias: sentencias . sentencia

    ID        shift, and go to state 51
    IF        shift, and go to state 52
    DO        shift, and go to state 53
    WHILE     shift, and go to state 54
    SEGUN     shift, and go to state 55
    INICIO    shift, and go to state 56
    TERMINAR  shift, and go to state 57
    END       shift, and go to state 88
    WRITE     shift, and go to state 58
    READ      shift, and go to state 59
    DEV       shift, and go to state 60

    sentencia  go to state 89
    variable   go to state 63


State 62

   27 sentencias: sentencia .

    $default  reduce using rule 27 (sentencias)


State 63

   33 sentencia: variable . IGUAL expresion PYC

    IGUAL  shift, and go to state 90


State 64

   70 variable_comp: LPAR . parametros RPAR
   73 arreglo: LPAR . expresion RPAR

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    LPAR      shift, and go to state 73

    $default  reduce using rule 76 (parametros)

    expresion    go to state 91
    variable     go to state 78
    parametros   go to state 92
    lista_param  go to state 93


State 65

   67 variable: ID variable_comp .

    $default  reduce using rule 67 (variable)


State 66

   68 variable_comp: dato_est_sim .
   71 dato_est_sim: dato_est_sim . PUNTO ID

    PUNTO  shift, and go to state 94

    $default  reduce using rule 68 (variable_comp)


State 67

   69 variable_comp: arreglo .
   74 arreglo: arreglo . LPAR expresion RPAR

    LPAR  shift, and go to state 95

    $default  reduce using rule 69 (variable_comp)


State 68

   66 expresion: CARACTER .

    $default  reduce using rule 66 (expresion)


State 69

   65 expresion: CADENA .

    $default  reduce using rule 65 (expresion)


State 70

   64 expresion: NUM .

    $default  reduce using rule 64 (expresion)


State 71

   48 e_bool: TRUE .

    $default  reduce using rule 48 (e_bool)


State 72

   49 e_bool: FALSE .

    $default  reduce using rule 49 (e_bool)


State 73

   62 expresion: LPAR . expresion RPAR

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    LPAR      shift, and go to state 73

    expresion  go to state 96
    variable   go to state 78


State 74

   46 e_bool: NOT . e_bool

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    TRUE      shift, and go to state 71
    FALSE     shift, and go to state 72
    LPAR      shift, and go to state 73
    NOT       shift, and go to state 74

    e_bool      go to state 97
    relacional  go to state 76
    expresion   go to state 77
    variable    go to state 78


State 75

   28 sentencia: IF e_bool . THEN sentencia END
   29          | IF e_bool . THEN sentencia SINO sentencia SINO sentencia END
   44 e_bool: e_bool . OR e_bool
   45       | e_bool . AND e_bool

    THEN  shift, and go to state 98
    AND   shift, and go to state 99
    OR    shift, and go to state 100


State 76

   47 e_bool: relacional .
   50 relacional: relacional . MENORQUE relacional
   51           | relacional . MAYORQUE relacional
   52           | relacional . MENORIGUAL relacional
   53           | relacional . MAYORIGUAL relacional
   54           | relacional . IDENTICO relacional
   55           | relacional . DIFERENTE relacional

    MENORQUE    shift, and go to state 101
    MENORIGUAL  shift, and go to state 102
    MAYORQUE    shift, and go to state 103
    MAYORIGUAL  shift, and go to state 104
    IDENTICO    shift, and go to state 105
    DIFERENTE   shift, and go to state 106

    $default  reduce using rule 47 (e_bool)


State 77

   56 relacional: expresion .
   57 expresion: expresion . MAS expresion
   58          | expresion . MENOS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MODULO expresion

    MUL     shift, and go to state 107
    DIV     shift, and go to state 108
    MODULO  shift, and go to state 109
    MAS     shift, and go to state 110
    MENOS   shift, and go to state 111

    $default  reduce using rule 56 (relacional)


State 78

   63 expresion: variable .

    $default  reduce using rule 63 (expresion)


State 79

   31 sentencia: DO sentencia . WHILE e_bool PYC

    WHILE  shift, and go to state 112


State 80

   30 sentencia: WHILE e_bool . DO sentencia END
   44 e_bool: e_bool . OR e_bool
   45       | e_bool . AND e_bool

    DO   shift, and go to state 113
    AND  shift, and go to state 99
    OR   shift, and go to state 100


State 81

   32 sentencia: SEGUN LPAR . variable RPAR DO casos predeterminado END

    ID  shift, and go to state 51

    variable  go to state 114


State 82

   26 sentencias: sentencias . sentencia
   39 sentencia: INICIO sentencias . END

    ID        shift, and go to state 51
    IF        shift, and go to state 52
    DO        shift, and go to state 53
    WHILE     shift, and go to state 54
    SEGUN     shift, and go to state 55
    INICIO    shift, and go to state 56
    TERMINAR  shift, and go to state 57
    END       shift, and go to state 115
    WRITE     shift, and go to state 58
    READ      shift, and go to state 59
    DEV       shift, and go to state 60

    sentencia  go to state 89
    variable   go to state 63


State 83

   38 sentencia: TERMINAR PYC .

    $default  reduce using rule 38 (sentencia)


State 84

   34 sentencia: WRITE expresion . PYC
   57 expresion: expresion . MAS expresion
   58          | expresion . MENOS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MODULO expresion

    PYC     shift, and go to state 116
    MUL     shift, and go to state 107
    DIV     shift, and go to state 108
    MODULO  shift, and go to state 109
    MAS     shift, and go to state 110
    MENOS   shift, and go to state 111


State 85

   35 sentencia: READ variable . PYC

    PYC  shift, and go to state 117


State 86

   36 sentencia: DEV PYC .

    $default  reduce using rule 36 (sentencia)


State 87

   37 sentencia: DEV expresion . PYC
   57 expresion: expresion . MAS expresion
   58          | expresion . MENOS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MODULO expresion

    PYC     shift, and go to state 118
    MUL     shift, and go to state 107
    DIV     shift, and go to state 108
    MODULO  shift, and go to state 109
    MAS     shift, and go to state 110
    MENOS   shift, and go to state 111


State 88

   16 funciones: DEF tipo ID LPAR argumentos RPAR INICIO declaraciones sentencias END . funciones

    DEF  shift, and go to state 14

    $default  reduce using rule 17 (funciones)

    funciones  go to state 119


State 89

   26 sentencias: sentencias sentencia .

    $default  reduce using rule 26 (sentencias)


State 90

   33 sentencia: variable IGUAL . expresion PYC

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    LPAR      shift, and go to state 73

    expresion  go to state 120
    variable   go to state 78


State 91

   57 expresion: expresion . MAS expresion
   58          | expresion . MENOS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MODULO expresion
   73 arreglo: LPAR expresion . RPAR
   78 lista_param: expresion .

    RPAR    shift, and go to state 121
    MUL     shift, and go to state 107
    DIV     shift, and go to state 108
    MODULO  shift, and go to state 109
    MAS     shift, and go to state 110
    MENOS   shift, and go to state 111

    RPAR      [reduce using rule 78 (lista_param)]
    $default  reduce using rule 78 (lista_param)


State 92

   70 variable_comp: LPAR parametros . RPAR

    RPAR  shift, and go to state 122


State 93

   75 parametros: lista_param .
   77 lista_param: lista_param . COMA expresion

    COMA  shift, and go to state 123

    $default  reduce using rule 75 (parametros)


State 94

   71 dato_est_sim: dato_est_sim PUNTO . ID

    ID  shift, and go to state 124


State 95

   74 arreglo: arreglo LPAR . expresion RPAR

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    LPAR      shift, and go to state 73

    expresion  go to state 125
    variable   go to state 78


State 96

   57 expresion: expresion . MAS expresion
   58          | expresion . MENOS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MODULO expresion
   62          | LPAR expresion . RPAR

    RPAR    shift, and go to state 126
    MUL     shift, and go to state 107
    DIV     shift, and go to state 108
    MODULO  shift, and go to state 109
    MAS     shift, and go to state 110
    MENOS   shift, and go to state 111


State 97

   44 e_bool: e_bool . OR e_bool
   45       | e_bool . AND e_bool
   46       | NOT e_bool .

    AND  shift, and go to state 99
    OR   shift, and go to state 100

    $default  reduce using rule 46 (e_bool)


State 98

   28 sentencia: IF e_bool THEN . sentencia END
   29          | IF e_bool THEN . sentencia SINO sentencia SINO sentencia END

    ID        shift, and go to state 51
    IF        shift, and go to state 52
    DO        shift, and go to state 53
    WHILE     shift, and go to state 54
    SEGUN     shift, and go to state 55
    INICIO    shift, and go to state 56
    TERMINAR  shift, and go to state 57
    WRITE     shift, and go to state 58
    READ      shift, and go to state 59
    DEV       shift, and go to state 60

    sentencia  go to state 127
    variable   go to state 63


State 99

   45 e_bool: e_bool AND . e_bool

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    TRUE      shift, and go to state 71
    FALSE     shift, and go to state 72
    LPAR      shift, and go to state 73
    NOT       shift, and go to state 74

    e_bool      go to state 128
    relacional  go to state 76
    expresion   go to state 77
    variable    go to state 78


State 100

   44 e_bool: e_bool OR . e_bool

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    TRUE      shift, and go to state 71
    FALSE     shift, and go to state 72
    LPAR      shift, and go to state 73
    NOT       shift, and go to state 74

    e_bool      go to state 129
    relacional  go to state 76
    expresion   go to state 77
    variable    go to state 78


State 101

   50 relacional: relacional MENORQUE . relacional

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    LPAR      shift, and go to state 73

    relacional  go to state 130
    expresion   go to state 77
    variable    go to state 78


State 102

   52 relacional: relacional MENORIGUAL . relacional

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    LPAR      shift, and go to state 73

    relacional  go to state 131
    expresion   go to state 77
    variable    go to state 78


State 103

   51 relacional: relacional MAYORQUE . relacional

    CARACTER  shift, and go to state 68
    CADENA    shift, and go to state 69
    NUM       shift, and go to state 70
    ID        shift, and go to state 51
    LPAR      shift, and go to state 73
